fixed menu auto collapse and responsive on mobile

--- a/app/assets/stylesheets/clients/index.scss
+++ b/app/assets/stylesheets/clients/index.scss
@@ -148,4 +148,13 @@
   .dataTables_info {
     padding-top: 15px;
   }
+  @media screen and (max-width: 700px){
+    .client-option {
+      // margin-top: 30px;
+      a{
+        display: inline-block;
+        margin-top: 8px;
+      }
+    }
+  }
 }
